# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unittest_utilities"
version = "1.0.0"
description = "Classes and functions to facilitate Python unit testing with the unittest package"
readme = "README.md"
authors = [{ name = "Christopher Holland", email = "chris.henry.holland@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python", "unit testing", "unittest"]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/chris-henry-holland/python-UnittestUtilities.git"